fixed cyrpto chat overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,7 +234,7 @@ nav {
     .thumbnail {
 
         width: 100%;
-        height: 80%;
+        height: 70%;
     }
 
     .thumbnail::after {
